# AdventOfCode2025

./: Cargo.toml  LICENSE  README.md  clippy.toml  justfile
crates/advent/: Cargo.toml
crates/advent/src/: lib.rs  shared.rs
src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  template.rs
src/input/: 07a.txt
src/problem/: 01.txt  02.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt
